线程池、计时器

--- a/doc/关键词.md
+++ b/doc/关键词.md
@@ -1,12 +1,5 @@
-# 一些基本工具的简单实现
+# 关键词
 
-个人练习。
-
-联系本人：dysjsjyAAA163.com
-
-请手动将AAA换成@
-
-## 关键词
 **线程池**
 > CoreThreads, CoreThread, SupportedThreads, SupportedThread,
 > BlockQueue.take(), BlockQueue.poll(long time, TimeUnit unit),
@@ -18,6 +11,6 @@
 **AQS**
 >
 
-**令牌桶RateLimiter**
+** 令牌桶RateLimiter **
 >
 
